# gif2mp4

./: .gitignore  README.md  pyproject.toml
src/gif2mp4/: __init__.py  __main__.py
