[project]
name = "gif2mp4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tanaka-Junsei", email = "tanaka.junsei.0103@gmail.com" }
]
dependencies = [
    "moviepy==2.0.0.dev2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gif2mp4"]

[tool.rye.scripts]
gif2mp4 = "gif2mp4.__main__:main"

